--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@cloudinary/url-gen": "^1.16.0",
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "@tanstack/react-query": "^5.4.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -18,7 +19,6 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
-    "react-helmet-async": "^2.0.4",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
