--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@cloudinary/url-gen": "^1.16.0",
     "@fvilers/disable-react-devtools": "^1.3.0",
     "@tanstack/react-query": "^5.4.3",
